feat(native): harden native image build and startup